--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -37,18 +37,19 @@ body {
 }
 
 .home {
-  background: white;
   min-height: 100vh;
   display: flex;
-  padding: 20px 100px;
+  flex-direction: column;
+  text-align: center;
 }
 
 .search {
-  width: 100%;
+  width: 85%;
   height: fit-content;
   border: 1px solid darkgray;
   border-radius: 5px;
   padding: 10px 50px;
+  margin: 20px auto;
 
   label {
     font-size: 1.5em;
@@ -58,5 +59,160 @@ body {
     border: 1px solid $primaryLight;
     padding: 4px 8px;
     margin: 0 20px 0 0;
+  }
+}
+
+.clear__button {
+  border-radius: 5px;
+  box-shadow: 0 0 4px $primary;
+  padding: 8px 12px;
+  margin: 0 auto 50px;
+  border: 1px solid $primary;
+  transition: 0.4s all;
+  font-weight: 700;
+  color: $primary;
+  background: white;
+  font-size: 1em;
+  cursor: pointer;
+
+  &:hover {
+    background: $primaryLight;
+    color: white;
+    transform: scale(0.95);
+  }
+}
+
+.error__message {
+  color: tomato;
+}
+
+.movies__container {
+  border: 1px solid darkgray;
+  border-radius: 5px;
+  padding: 50px;
+  width: 80%;
+  display: flex;
+  flex-flow: wrap;
+}
+
+.movie {
+  border: 1px solid darkgray;
+  border-radius: 5px;
+  padding: 8px 12px;
+  width: 18%;
+  margin: 20px;
+  transition: 0.4s all ease;
+  cursor: pointer;
+  &:hover {
+    transform: scale(0.95);
+    opacity: 0.8;
+    box-shadow: 0 0 7px 2px gray;
+  }
+  @media only screen and (max-width: 800px) {
+    width: 35%;
+  }
+  @media only screen and (max-width: 450px) {
+    width: 100%;
+  }
+}
+
+.movie__title {
+  font-weight: 700;
+  font-size: 1rem;
+  letter-spacing: 1px;
+}
+
+.movie__image {
+  width: 100%;
+}
+
+//SPINNER:
+.spinner {
+  width: 100%;
+  margin: 30px auto;
+  text-align: center;
+  .lds-roller {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+  }
+  .lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+  }
+  .lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: $primaryLight;
+    margin: -4px 0 0 -4px;
+  }
+  .lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+  }
+  .lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+  }
+  .lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+  }
+  .lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+  }
+  .lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+  }
+  .lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+  }
+  .lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+  }
+  .lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+  }
+  .lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+  }
+  .lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+  }
+  .lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+  }
+  .lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+  }
+  .lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+  }
+  .lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+  }
+  .lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+  }
+  .lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+  }
+  @keyframes lds-roller {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
   }
 }
